Fix postmaster taking up a bit too much space

--- a/style/view/InventorySlotView.scss
+++ b/style/view/InventorySlotView.scss
@@ -1,8 +1,12 @@
 .view-inventory-slot {
 	--view-padding-x: 12px;
-	--bucket-inventory-width: calc(
+	--bucket-inventory-inner-width: calc(
 		var(--slot-size) * 4
-		+ var(--bucket-inventory-padding) * 3
+		+ var(--bucket-inventory-padding)
+	);
+	--bucket-inventory-width: calc(
+		var(--bucket-inventory-inner-width)
+		+ var(--bucket-inventory-padding) * 2
 		+ var(--card-gap-x) / 2
 		+ var(--view-padding-x)
 	);
@@ -346,7 +350,7 @@
 	
 	&-postmaster-bucket {
 		&s {
-			--slot-size: calc(var(--bucket-inventory-width) / 7);
+			--slot-size: calc(var(--bucket-inventory-inner-width) / 7);
 			display: grid;
 			grid-template-rows: repeat(3, 1fr);
 		}
@@ -379,7 +383,7 @@
 		}
 		
 		&-engrams {
-			--slot-size: calc(var(--bucket-inventory-width) / 10);
+			--slot-size: calc(var(--bucket-inventory-inner-width) / 10);
 			display: grid;
 			grid-template-columns: repeat(10, 1fr);
 			padding: var(--card-content-padding, 8px) var(--card-content-padding, 16px);
@@ -394,10 +398,10 @@
 			&:nth-child(2) { grid-row: initial; grid-column: 2 }
 			&:nth-child(3) { grid-row: initial; grid-column: 3 }
 			
-			max-width: var(--bucket-inventory-width);
+			max-width: var(--bucket-inventory-inner-width);
 		
 			&-engrams {
-				--slot-size: calc((var(--bucket-inventory-width) - var(--bucket-inventory-padding) * 2) / 10);
+				--slot-size: calc((var(--bucket-inventory-inner-width) - var(--bucket-inventory-padding) * 2) / 10);
 			}
 		}
 		
